recursion.hanoi.lessons.recursion.hanoi.SplitHanoi3.scala.error
SplitHanoi3:37: error: not enough arguments for method hanoi_fast: (height: Int, src: Int, free: Int, full: Int, dst: Int)Unit.
Unspecified value parameter dst.
      hanoi_fast((n - 1), dst2, src, dst1)
                ^SplitHanoi3:39: error: not enough arguments for method hanoi_fast: (height: Int, src: Int, free: Int, full: Int, dst: Int)Unit.
Unspecified value parameter dst.
      hanoi_fast((n - 1), other, src, dst2)
                ^